--- a/styles/commonStyles.module.less
+++ b/styles/commonStyles.module.less
@@ -98,6 +98,7 @@ body {
 .ant-btn {
   box-shadow: 0px 10x 20px rgba(54, 53, 52, 0.219) !important;
   font-weight: 500 !important;
+  padding: 6.4px 35px !important;
 }
 
 .ant-divider-horizontal {
